test/conformance/kuttl/generate-validating-admission-policy/clusterpolicy/standard/generate/cpol-any-match-multiple-resources/02-validatingadmissionpolicy.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
assert:
- validatingadmissionpolicy.yaml
- validatingadmissionpolicybinding.yaml
